force-app/main/default/objects/DocGen_Signature_Request__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description
    >When the signing links for this request stop working. Stamped at send (org default or per-send override) and re-stamped on resend. Null on requests created before v3.31 — those keep the legacy 48-hour lifetime from CreatedDate.</description>
    <label>Link Expires At</label>
    <type>DateTime</type>
</CustomField>