force-app/main/default/objects/DocGen_Signature_Request__c/fields/Frozen_Document__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Document__c</fullName>
    <description
    >Point-in-time snapshot of the merged document body (JSON of combinedDocumentXml/relsXml/contentTypesXml/templateType per template) captured when the signature request is created. The signed PDF is rendered from THIS frozen content, not a live re-merge, so the signer signs exactly what was reviewed. Null on legacy requests / oversized documents, which fall back to live merge.</description>
    <label>Frozen Document</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>