force-app/main/default/objects/DocGen_Signature_Request__c/fields/Frozen_Document_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Document_CV_Id__c</fullName>
    <description
    >#156: ContentVersion Id of the point-in-time frozen-document snapshot (JSON of combinedDocumentXml/relsXml/contentTypesXml/templateType per template) captured when the request is created. The signed PDF renders from THIS snapshot, not a live re-merge, so the signer signs exactly what was reviewed. Stored in a CV (not the Frozen_Document__c LongTextArea) to remove the 131072-char ceiling, so large/image-heavy templates are frozen rather than degrading to a live merge. Null on legacy requests, which fall back to Frozen_Document__c then live merge.</description>
    <label>Frozen Document CV Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>