force-app/main/default/objects/DocGen_Signature_Request__c/fields/Prefill_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Signer_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Resolved at send time (#verification). When true and verification is required, the signing page skips the email-entry step and auto-sends the one-time code to the signer's stored address. The signing page reads this field.</description>
    <label>Pre-fill Signer Email</label>
    <type>Checkbox</type>
</CustomField>