force-app/main/default/objects/DocGen_Signature_Request__c/fields/Render_Data_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Render_Data_Snapshot__c</fullName>
    <description
    >JSON snapshot of the template merge data captured at send-time (DocGenDataRetriever.getRecordData). When present, the completion finalizer re-renders the document from this snapshot instead of the live record, so the signed PDF matches what the signer reviewed even if the source record is edited before signing.</description>
    <label>Render Data Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>