force-app/main/default/objects/DocGen_Signature_Request__c/fields/Require_Email_Verification__c.field-meta.xml
<CustomField>
    <fullName>Require_Email_Verification__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >Resolved at send time from the per-send override, template default, then org default (#verification). When true, signers on this request must verify a one-time email PIN before signing; when false, the verification step is skipped. The signing page and the saveSignature/signPlacement gates read this field.</description>
    <label>Require Email Verification</label>
    <type>Checkbox</type>
</CustomField>