force-app/main/default/objects/DocGen_Signature_Request__c/fields/Snapshot_Hash__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Hash__c</fullName>
    <description
    >SHA-256 hash of the frozen document body captured at request creation. Surfaced on the signature certificate and verification so the audit proves the signed document equals what the signer reviewed.</description>
    <label>Snapshot Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>