force-app/main/default/objects/DocGen_Signature_Request__c/fields/Snapshot_Taken_At__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Taken_At__c</fullName>
    <description
    >Timestamp when the document body was frozen for signing (request creation). Surfaced on the signature certificate as the point-in-time the signer's content was locked.</description>
    <label>Snapshot Taken At</label>
    <type>DateTime</type>
</CustomField>