force-app/main/default/objects/DocGen_Signature_Request__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
    >The Portwood template used for this signature request. When set, the PDF is generated by merging this template with the related record at signing time — no pre-generated DOCX needed.</description>
    <label>Template</label>
    <referenceTo>DocGen_Template__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>